--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               <h2 class="btc-valor-compra text"><span data-simbolo>$</span> 100000</h2>
               <div id="desktop" class="form-bg">
                 <form class="form-valor">
-                  <input type="text" placeholder="DIGITI O VALOR...">
+                  <input type="text" name="name" id="name" placeholder="DIGITI O VALOR...">
                   <select>
                     <option value="1">USD</option>
                     <option value="2">EUR</option>
