--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <div class="form-mobile">
           <div class="form-bg">
             <form class="form-valor">
-              <input type="text" placeholder="DIGITI O VALOR...">
+              <input type="text" name="name" id="name" placeholder="DIGITI O VALOR...">
               <select>
                 <option value="1">USD</option>
                 <option value="2">EUR</option>
