--- a/index.html
+++ b/index.html
@@ -120,33 +120,21 @@
                 </linearGradient>
               </defs>
             </svg></span>
-          <div id="form" class="btc-bg-comprar">
+          <div class="btc-bg-comprar">
             <div class="btc-container-comprar">
               <h2 class="btc-valor-compra text"><span data-simbolo>$</span> 100000</h2>
-              <div id="desktop" class="form-bg">
-                <form class="form-valor">
-                  <input type="text" name="name" id="name" placeholder="DIGITI O VALOR...">
-                  <select>
-                    <option value="1">USD</option>
-                    <option value="2">EUR</option>
-                    <option value="3">BRL</option>
-                  </select>
-                </form>
-              </div>
             </div>
           </div>
         </div>
-        <div class="form-mobile">
-          <div class="form-bg">
-            <form class="form-valor">
-              <input type="text" name="name" id="name" placeholder="DIGITI O VALOR...">
-              <select>
-                <option value="1">USD</option>
-                <option value="2">EUR</option>
-                <option value="3">BRL</option>
-              </select>
-            </form>
-          </div>
+        <div class="form-bg">
+          <form class="form-valor">
+            <input type="text" name="name" id="name" placeholder="DIGITI O VALOR...">
+            <select>
+              <option value="1">USD</option>
+              <option value="2">EUR</option>
+              <option value="3">BRL</option>
+            </select>
+          </form>
         </div>
       </section>
     </div>
