ajust card catacao

--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
             <li>
               <div class="bg-moeda-cotação">
                 <h3 class="text" data-btc="USD">100.000</h3>
-                <span>$ - Dolar</span>
+                <span>USD - Dolar</span>
               </div>
             </li>
             <li>
               <div class="bg-moeda-cotação">
                 <h3 class="text" data-btc="EUR">100.000</h3>
-                <span>€ - Euro</span>
+                <span>EUR - Euro</span>
               </div>
             </li>
             <li>
               <div class="bg-moeda-cotação">
                 <h3 class="text" data-btc="BRL">100.000</h3>
-                <span>R$ - Real</span>
+                <span>BRL - Real</span>
               </div>
             </li>
           </ul>
